[gd_scene load_steps=9 format=2]

[ext_resource path="res://cars/formula_one.tscn" type="PackedScene" id=1]
[ext_resource path="res://test/wheel.gd" type="Script" id=2]
[ext_resource path="res://cars/car.gd" type="Script" id=3]
[ext_resource path="res://tracks/loop.tscn" type="PackedScene" id=4]

[sub_resource type="ProceduralSky" id=2]
sky_top_color = Color( 0.121569, 0.686275, 1, 1 )
ground_bottom_color = Color( 0.647059, 0.839216, 0.945098, 1 )
ground_horizon_color = Color( 0.839216, 0.917647, 0.980392, 1 )

[sub_resource type="Environment" id=3]
background_mode = 2
background_sky = SubResource( 2 )

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 200, 200 )

[sub_resource type="SpatialMaterial" id=4]
flags_vertex_lighting = true
albedo_color = Color( 0.215686, 0.419608, 0.231373, 1 )

[node name="Spatial" type="Spatial"]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.822375, -0.447778, 0.350992, 0.122874, 0.742138, 0.658888, -0.55552, -0.498725, 0.665336, 0.32153, 6.02225, 0.527332 )
shadow_enabled = true
shadow_color = Color( 0.568627, 0.568627, 0.568627, 1 )
directional_shadow_mode = 1

[node name="Camera" type="Camera" parent="."]
transform = Transform( -0.998279, 0.020069, -0.0551033, 0, 0.939621, 0.342217, 0.0586442, 0.341628, -0.938004, -15.7271, 2.21467, -5.1603 )

[node name="formula_one" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.00809222, 0.00587503, -2.56806e-10, 0, -4.37114e-10, -0.01, -0.00587503, 0.00809222, -3.53722e-10, -15.257, 0.504, 0 )
script = ExtResource( 3 )

[node name="wheel_back_left" parent="formula_one" index="0"]
script = ExtResource( 2 )

[node name="wheel_back_right" parent="formula_one" index="1"]
script = ExtResource( 2 )

[node name="wheel_front_left" parent="formula_one" index="2"]
script = ExtResource( 2 )

[node name="whell_front_right" parent="formula_one" index="3"]
script = ExtResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="loop" parent="." instance=ExtResource( 4 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 13.601, 0.005, 0 )

[node name="floor" type="MeshInstance" parent="."]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 4 )

[editable path="formula_one"]
